contacts UI updated

--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -10,12 +10,14 @@
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:id="@+id/text_header"
+                android:gravity="center"
+                android:padding="10dp"
                 android:layout_height="wrap_content"
                 android:textSize="30sp"
                 android:text="Institute Health Committee"
@@ -34,72 +36,99 @@
                     android:layout_height="wrap_content"
                     android:text="The Institute Health Committee of NIT Tiruchirappalli comprises of the following members"
                     android:textSize="17sp"
+                    android:gravity="center"
+                    android:textColor="#000000"
+                    android:layout_margin="5dp"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1. Chairman – Hospital"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2. Dean – Students Welfare"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3. Dean – Institute Development"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4. Senior Medical Officer"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="5. Estate Officer"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="6. Convener – Hostels"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="7. Medical Officers"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="8. Warden – Ladies Hostel"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="9. President – Students Council"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10. Vice President – Students Council"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="The committee in coordination with the Public Health Officer will ensure that all precautionary measures are taken to control and prevent the spread of any notifiable / communicable disease in the campus"
                     android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
                     />
             </LinearLayout>
 
@@ -107,6 +136,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/lin_contacts"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical"
                 android:layout_below="@+id/lin_share">
                 <TextView
@@ -121,57 +152,90 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hospital"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="National Institute of Technology"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tiruchirappalli 620015, Tamilnadu, India"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tel: +91-431-2503860"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Ambulance Mobile No. 9486001162"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Email: hospital@nitt.edu"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Dr. N. Anantharaman, Chairperson 8248931091"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Dr. R. Priyanka, Medical Officer 9486001137"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mr. Jagannathan, Manager, The New India Assurance, Trichy 9443259908"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mr. Balaguru – Location in charge Medi-Assist 9344501949"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mr. C. Suresh, Customer Relation Medi-Assist 9344493445"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
 
             </LinearLayout>
         </LinearLayout>
