--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff0000">
+    android:background="@color/colorPrimaryDark">
 
     <TextView
         android:id="@+id/textView"
@@ -11,6 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_margin="20dp"
+        android:textStyle="bold"
+        android:textSize="80sp"
+
         android:gravity="center"
         android:textColor="#000000"
         android:background="#ffffff"
