--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,10 +12,10 @@
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_person_black_24dp"
             android:title="User_ID" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Feature 1" />
+<!--        <item-->
+<!--            android:id="@+id/nav_slideshow"-->
+<!--            android:icon="@drawable/ic_menu_slideshow"-->
+<!--            android:title="Feature 1" />-->
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_shopping_cart_black_24dp"
