--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -3,55 +3,74 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:gravity="center">
-<Button
-    android:layout_width="190dp"
-    android:layout_height="190dp"
-    android:id="@+id/b1"
-    android:text="WARDS"
-    android:textStyle="italic"
-    android:textSize="25sp"
+    android:gravity="center"
+    android:padding="10dp">
 
-    ></Button>
     <Button
+        android:id="@+id/b1"
         android:layout_width="190dp"
         android:layout_height="190dp"
-        android:layout_toRightOf="@id/b1"
+        android:layout_margin="2dp"
+        android:background="@color/colorPrimary"
+        android:elevation="5dp"
+        android:text="WARDS"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:textStyle="italic" />
+
+    <Button
         android:id="@+id/b2"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:layout_margin="2dp"
+        android:layout_toRightOf="@id/b1"
+        android:background="@color/colorPrimary"
+        android:elevation="5dp"
         android:text="MEDICAL EQUIPMENTS"
-        android:textStyle="italic"
+        android:textColor="#ffffff"
         android:textSize="25sp"
-        ></Button>
-    <Button
-        android:layout_width="190dp"
-        android:layout_height="190dp"
-        android:id="@+id/b3"
-        android:text="CLINICAL LAB"
-        android:layout_below="@id/b1"
-        android:textStyle="italic"
-        android:textSize="25sp"
-        ></Button>
-    <Button
-        android:layout_width="190dp"
-        android:layout_height="190dp"
-        android:id="@+id/b4"
-        android:text="PHARMACY"
-        android:layout_toRightOf="@id/b3"
-        android:layout_below="@id/b2"
-        android:textStyle="italic"
-        android:textSize="25sp"
-        ></Button>
-    <Button
-        android:layout_width="220dp"
-        android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_height="190dp"
-        android:id="@+id/b5"
-        android:text="PHYSIOTHERAPY CLINIC"
-        android:layout_below="@id/b3"
+        android:textStyle="italic" />
 
-        android:textStyle="italic"
+    <Button
+        android:id="@+id/b3"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:layout_below="@id/b1"
+        android:layout_margin="2dp"
+        android:background="@color/colorPrimary"
+        android:elevation="5dp"
+        android:text="CLINICAL LAB"
+        android:textColor="#ffffff"
         android:textSize="25sp"
-        ></Button>
+        android:textStyle="italic" />
+
+    <Button
+        android:id="@+id/b4"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:layout_below="@id/b2"
+        android:layout_margin="2dp"
+        android:layout_toRightOf="@id/b3"
+        android:background="@color/colorPrimary"
+        android:elevation="5dp"
+        android:text="PHARMACY"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:textStyle="italic" />
+
+    <Button
+        android:id="@+id/b5"
+        android:layout_width="220dp"
+        android:layout_height="190dp"
+        android:layout_below="@id/b3"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="2dp"
+        android:background="@color/colorPrimary"
+        android:elevation="5dp"
+        android:gravity="center"
+
+        android:text="PHYSIOTHERAPY CLINIC"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:textStyle="italic" />
 </RelativeLayout>
