--- a/app/src/main/res/layout/activity_doctor_2.xml
+++ b/app/src/main/res/layout/activity_doctor_2.xml
@@ -6,28 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".adminDoc.Doctor_Activity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name of the doctor!"
-        android:id="@+id/name"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/linear1"
-        android:layout_below="@+id/name"
         android:gravity="center"
+        android:layout_centerInParent="true"
         >
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/radio_group"
+            android:layout_margin="20dp"
+            android:padding="10dp"
             >
             <RadioButton
                 android:layout_width="wrap_content"
@@ -35,14 +26,14 @@
                 android:id="@+id/available"
                 android:text="Available"
                 android:textSize="20sp"
+                android:padding="10dp"
                 android:checked="true"
-                android:padding="30dp"
                 />
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="30dp"
                 android:text="Not Available"
+                android:padding="10dp"
                 android:textSize="20sp"
                 android:id="@+id/not_available"/>
         </RadioGroup>
@@ -56,9 +47,13 @@
         android:id="@+id/relative1"
         android:layout_below="@id/linear1">
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/add_patient"
+            android:textColor="#ffffff"
+            android:background="@color/colorPrimary"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:text="ADD PATIENT"
             android:layout_centerHorizontal="true"
             />
