--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -4,18 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
-
     <TextView
+        android:layout_below="@+id/image"
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="20dp"
         android:textStyle="bold"
-        android:textSize="80sp"
-
+        android:textSize="20sp"
         android:gravity="center"
         android:textColor="#000000"
         android:background="#ffffff"
         android:text="TextView" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_centerInParent="true"
+        android:padding="50dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:src="@drawable/doctor_image"/>
 </RelativeLayout>
