made fixes and doctor side feedback

--- a/app/src/main/res/layout/activity_login_doc.xml
+++ b/app/src/main/res/layout/activity_login_doc.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -97,6 +96,7 @@
                 android:id="@+id/student"
                 android:text="Student"
                 android:textSize="20sp"
+                android:checked="true"
                 android:textColor="@color/white"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="20dp"/>
