--- a/app/src/main/res/menu/logout_for_admin_menu.xml
+++ b/app/src/main/res/menu/logout_for_admin_menu.xml
@@ -3,14 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/logout"
+        android:id="@+id/view_feedback"
         android:orderInCategory="100"
         app:showAsAction="never"
-        android:title="Sign Out"/>
+        android:title="View Feedback" />
     <item
         android:id="@+id/dispenser"
         android:orderInCategory="100"
         app:showAsAction="never"
         android:title="Dispenser"/>
+    <item
+        android:id="@+id/logout"
+        android:orderInCategory="100"
+        android:title="Sign Out"
+        app:showAsAction="never" />
 
 </menu>
