--- a/app/src/main/res/layout/doctor_details_item_card.xml
+++ b/app/src/main/res/layout/doctor_details_item_card.xml
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
-                android:text="Book Appointment"
+                android:text="Available"
                 android:textColor="#ffffff" />
 
         </androidx.cardview.widget.CardView>
